welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:7: error: ')' expected but 'return' found.
	return false;
        ^SnakeBuggle:27: error: illegal start of simple expression
}
^