welcome.lessons.welcome.traversal.Snake.scala.code
override def run() {
def posfinale() {
	if (estFaceMur() && ((getDirection() == Direction.EST) ||(getDirection() == Direction.OUEST ))  {
		return true;
	}
	return false;
}
def serpent() {
	if (posfinale() && (getDirection() == Direction.EST) ) {
		droite()
		avance();
		droite();
	}else {
		if (posfinale() && (getDirection() == Direction.OUEST) ) {
		gauche()
		avance();
		gauche();
		avance();
	} else { avance();
	}
	
}
def snake() {
	baisseBrosse();
	while (!
}
}
}
